--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -25,3 +25,4 @@ RUN apt-get update \
     && echo "daemon off;" >> /etc/nginx/nginx.conf 
 
 ADD default /etc/nginx/sites-available/default
+ADD supervisord.conf /etc/supervisor/conf.d/supervisord.conf
