--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -26,3 +26,6 @@ RUN apt-get update \
 
 ADD default /etc/nginx/sites-available/default
 ADD supervisord.conf /etc/supervisor/conf.d/supervisord.conf
+ADD php-fpm.conf /etc/php/7.4/fpm/php-fpm.conf
+
+CMD ["supervisord"]
